# __COPYRIGHT__
# __FILE__ __REVISION__ __DATE__ __DEVELOPER__


                 SCons - a software construction tool

                            Change Log



RELEASE X.X.X - XXX

  From Luca Falavigna:

    - Fix typos in the man page.

  From Steven Knight:

    - Make the messages for Configure checks of compilers consistent.

  From Rob Managan:

    - Update tex builder to handle the case where a \input{foo}
      command tries to work with a directory named foo instead of the
      file foo.tex. The builder now ignores a directory and continues
      searching to find the correct file. Thanks to Lennart Sauerbeck
      for the test case and initial patch
      
      Also allow the \include of files in subdirectories when variantDir
      is used with duplicate=0. Previously latex would crash since 
      the directory in which the .aux file is written was not created.
      Thanks to Stefan Hepp for finding this and part of the solution.

  From James Teh:
    - Patches to fix some issues using MS SDK V7.0

  From William Deegan:
    - Lots of testing and minor patches to handle mixed MS VC and SDK
      installations, as well as having only the SDK installed.


RELEASE 1.2.0.d20100117 - Sun, 17 Jan 2010 14:26:59 -0800  

  From Jim Randall:
    - Fixed temp filename race condition on Windows with long cmd lines.

  From David Cournapeau:
    - Fixed tryRun when sconf directory is in a variant dir.
    - Do not add -fPIC for ifort tool on non-posix platforms (darwin and
      windows).
    - Fix bug 2294 (spurious CheckCC failures).
    - Fix scons bootstrap process on windows 64 (wrong wininst name)

  From William Deegan:
    - Final merge from vs_revamp branch to main

    - Added definition and usage of HOST_OS, HOST_ARCH, TARGET_OS, 
      TARGET_ARCH, currently only defined/used by Visual Studio
      Compilers. This will be rolled out to other platforms/tools
      in the future.

    - Add check for python >= 3.0.0 and exit gracefully.